# context-is-the-new-weight

./: .gitignore  PROPOSAL.md  README.md  pyproject.toml
data/: queries.jsonl
experiments/: README.md
experiments/01_synth_distill_kvdw/: README.md  analyze.py  config.yaml  phase1_dataset.py  phase2_distill.py  phase2c_ctxonly.py  phase2p_prefix.py  phase2x_peft.py  phase3_verify.py  phase3c_rouge_validation.py  phase3x_rouge_peft.py  phase4_kvdw.py  phase4b_delta_norms.py  phase4e_activations_train_val.py  phase4p_prefix_activations.py  phase4x_peft_activations.py  phase5_mmlu_eval.py  phase5p_mmlu_prefix.py  phase5x_mmlu_peft.py  render_activation_figures.py  render_mmlu_bars.py  render_prefix_comparison.py  run.py  run.sh  run_ctxonly_pipeline.py  run_peft.sh  submit_all.sh  submit_peft.sh  summarize_mmlu.py  summarize_validation.py
experiments/extras/02_kv_vs_delta_w/: README.md
experiments/extras/03_invert_delta_w_to_context/: README.md
figures/: mmlu_pro_summary.csv  peak_alignment_table.csv  prefix_summary.csv
notes/: research-log.md
paper/: checklist.tex  main.tex  neurips_2026.tex  references.bib
scripts/: download_mmlu_pro.py  pull_results.sh
src/: behavior_eval.py  contexts.py  delta.py  distill.py  eval_mmlu.py  kvdw.py  metrics.py  models.py  peft_adapter.py  prefix_tune.py  rouge_eval.py  synth.py  teacher.py  use_cases.py  validation_queries.py  verify.py
