[project]
name = "context-is-the-new-weight"
version = "0.0.1"
description = "Investigating when in-context information is functionally equivalent to weight updates."
requires-python = ">=3.11"
dependencies = [
    # CARC's max supported CUDA driver is 12.9. Use torch 2.6 with cu126 wheels
    # (install via: uv pip install torch==2.6.* --index-url https://download.pytorch.org/whl/cu126)
    "torch>=2.4,<2.10",
    "transformers>=4.46",
    "peft>=0.13",
    "accelerate>=1.0",
    "datasets>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "bitsandbytes>=0.44; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
# Created with: uv venv --python 3.11 && uv pip install -e .
